# bracu-ocw

./: docker-compose.yml
backend/: .gitignore  README.md  api.http  pyproject.toml  pyrightconfig.json
backend/app/: main.py  models.py
backend/app/api/: auth.py  course.py  main.py
backend/app/core/: config.py  db.py  security.py  storage.py
backend/migrations/: env.py
backend/migrations/versions/: 5256c1acbb3f_.py  5b7d34679ce8_.py  62c380bad425_.py  e77bb69ac66e_.py
backend/src/: db.py  main.py  models.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.tsx
frontend/src/components/: CourseCard.tsx  FilterSection.tsx  Tag.tsx  Topbar.tsx
frontend/src/pages/: Details.tsx  Home.tsx
